--- a/Sources/UI/PostWithImageView/PostWithImageView.xib
+++ b/Sources/UI/PostWithImageView/PostWithImageView.xib
@@ -16,13 +16,26 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="eWJ-Pu-XeI">
+        <view contentMode="scaleToFill" id="ENA-mT-rge">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-        </imageView>
-        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" id="KW7-ff-wrk">
-            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-        </activityIndicatorView>
+            <subviews>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="KW7-ff-wrk">
+                    <rect key="frame" x="177" y="323" width="20" height="20"/>
+                </activityIndicatorView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eWJ-Pu-XeI">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                </imageView>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="eWJ-Pu-XeI" firstAttribute="height" secondItem="ENA-mT-rge" secondAttribute="height" id="AOQ-dl-1f9"/>
+                <constraint firstItem="KW7-ff-wrk" firstAttribute="centerX" secondItem="ENA-mT-rge" secondAttribute="centerX" id="BYw-de-ksT"/>
+                <constraint firstItem="KW7-ff-wrk" firstAttribute="centerY" secondItem="ENA-mT-rge" secondAttribute="centerY" id="Jia-XA-klN"/>
+                <constraint firstItem="eWJ-Pu-XeI" firstAttribute="centerX" secondItem="ENA-mT-rge" secondAttribute="centerX" id="K4m-mc-Trs"/>
+                <constraint firstItem="eWJ-Pu-XeI" firstAttribute="centerY" secondItem="ENA-mT-rge" secondAttribute="centerY" id="NFg-Cm-8Xq"/>
+                <constraint firstItem="eWJ-Pu-XeI" firstAttribute="width" secondItem="ENA-mT-rge" secondAttribute="width" id="k8O-mb-3BZ"/>
+            </constraints>
+        </view>
     </objects>
 </document>
